# distributed-observability-project-python

./: .gitignore  docker-compose.yml  prometheus.yml  pyproject.toml
service3/: pyproject.toml
service3/src/service3/: controller.py  db_postgres.py  models.py  observability.py
service4/: pyproject.toml
service4/src/service4/: controller.py  db_mongo.py  observability.py  schema.py
