[project]
name = "main-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.13,<3.14"
dependencies = [
]

[tool.poetry.dependencies]
service3 = {path = "service3", develop = true}
service4 = {path = "service4", develop = true}


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
